# Portafolio-2

./: CMakeLists.txt  EST  README.md
Ejercicio-1/: Cadenas.c  Cadenas.h  main.c  minunit.h
Ejercicio-10/: Funciones.c  Funciones.h  Polinomios.c  main.c  minunit.h
Ejercicio-2/: Supermercado.c  Supermercado.h  main.c  minunit.h
Ejercicio-3/: Funciones.c  Funciones.h  main.c
Ejercicio-4/: Estudiantes.c  Estudiantes.h  main.c  minunit.h
Ejercicio-5/: Cadenas.c  Cadenas.h  main.c
Ejercicio-6/: Funciones.c  Funciones.h  main.c  minunit.h
Ejercicio-7/: Contrasena.c  Contrasena.h  main.c  minunit.h
Ejercicio-8/: Funciones.c  Funciones.h  main.c  miunit.h
Ejercicio-9/: Funciones.c  Funciones.h  Listas.c  main.c
