cmake_minimum_required(VERSION 3.14)
project(Portafolio-2)

set(CMAKE_C_STANDARD 99)

add_executable(Ejercicio-1 Ejercicio-1/main.c Ejercicio-1/Cadenas.c Ejercicio-1/Cadenas.h Ejercicio-1/minunit.h )

add_executable(Ejercicio-2 Ejercicio-2/main.c Ejercicio-2/Supermercado.c Ejercicio-2/Supermercado.h Ejercicio-2/minunit.h)

add_executable(Ejercicio-3 Ejercicio-3/main.c)