cmake_minimum_required(VERSION 3.14)
project(Portafolio-2)

set(CMAKE_C_STANDARD 99)

add_executable(Ejercicio-1 Ejercicio-1/main.c Ejercicio-1/Cadenas.c Ejercicio-1/Cadenas.h Ejercicio-1/minunit.h)

add_executable(Ejercicio-2 Ejercicio-2/main.c Ejercicio-2/Supermercado.c Ejercicio-2/Supermercado.h Ejercicio-2/minunit.h)

add_executable(Ejercicio-3 Ejercicio-3/main.c Ejercicio-3/Funciones.c Ejercicio-3/Funciones.h Ejercicio-3/minunit.h)

add_executable(Ejercicio-4 Ejercicio-4/main.c Ejercicio-4/Estudiantes.c Ejercicio-4/Estudiantes.h Ejercicio-4/minunit.h)

add_executable(Ejercicio-5 Ejercicio-5/main.c Ejercicio-5/Cadenas.c Ejercicio-5/Cadenas.h Ejercicio-5/minunit.h)

add_executable(Ejercicio-6 Ejercicio-6/main.c Ejercicio-6/Funciones.c Ejercicio-6/Funciones.h Ejercicio-6/minunit.h EST)

add_executable(Ejercicio-7 Ejercicio-7/main.c Ejercicio-7/Contrasena.c Ejercicio-7/Contrasena.h Ejercicio-7/minunit.h)

add_executable(Ejercicio-9 Ejercicio-9/main.c Ejercicio-9/Funciones.c Ejercicio-9/Funciones.h Ejercicio-9/minunit.h Ejercicio-9/Listas.c)

add_executable(Ejercicio-10 Ejercicio-10/main.c Ejercicio-10/Funciones.c Ejercicio-10/Funciones.h Ejercicio-10/minunit.h Ejercicio-10/Polinomios.c)
